--- a/index.html
+++ b/index.html
@@ -8,42 +8,50 @@
 
   <body>
     <div class="banner">
-    <h1 id=#home>Broadway Design</h1>
+    <h1 id=home>Broadway Design</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Process</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     </div>
 
-    <h2 id=#process>Our Process</h2>
-    <img src="" alt="">
+    <h2 id="process">Our Process</h2>
+    <img src="./resources/images/identify.svg" alt="icon of squiggly arrow">
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
-    <img src="" alt="">
+    <img src="./resources/images/understand.svg" alt="circular arrow doodle">
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
-    <img src="" alt="">
+    <img src="resources/images/execute.svg" alt="straight arrow icon">
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
 
-    <div class="midline" id=#work>
+    <div class="midline" id=work>
       <h3>Designed in New York</h3>
     </div>
 
     <h3>Portfolio</h3>
     <p>Coming soon</p>
-    <h3>Team</h3>
+    <h3 id="team">Team</h3>
     <p>We're Hiring!</p>
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <p>Phone: (555) 555-5555 <br>E-mail: test@example.com <br>Twitter: @test</p>
 
 
-    <footer>&copy; Broadway 2016<nav>#</nav></footer>
+    <footer>&copy; Broadway 2016<nav>
+
+        <li><a href="#home">Home</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
+
+    </nav></footer>
 
   </body>
 </html>
