--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
   <body>
     <div class="banner">
     <h1 id=home>Broadway Design</h1>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#process">Process</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+
+        <p><a href="#home">Home</a></p>
+        <p><a href="#process">Process</a></p>
+        <p><a href="#work">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contact">Contact</a></p>
+
     </div>
 
     <h2 id="process">Our Process</h2>
@@ -38,20 +36,19 @@
     <h3>Portfolio</h3>
     <p>Coming soon</p>
     <h3 id="team">Team</h3>
+    
     <p>We're Hiring!</p>
     <h3 id="contact">Contact</h3>
     <p>Phone: (555) 555-5555 <br>E-mail: test@example.com <br>Twitter: @test</p>
 
 
-    <footer>&copy; Broadway 2016<nav>
-
-        <li><a href="#home">Home</a></li>
-        <li><a href="#process">Process</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-
-    </nav></footer>
+    <footer>&copy; Broadway 2016
+        <a href="#home">Home</a>
+        <a href="#process">Process</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+        </footer>
 
   </body>
 </html>
