--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </div>
 
-    <h2 id="process">Our Process</h2>
+    <h2 id="process">The Lola Process</h2>
     <img src="./resources/images/identify.svg" alt="icon of squiggly arrow">
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
@@ -36,7 +36,7 @@
     <h3>Portfolio</h3>
     <p>Coming soon</p>
     <h3 id="team">Team</h3>
-    
+
     <p>We're Hiring!</p>
     <h3 id="contact">Contact</h3>
     <p>Phone: (555) 555-5555 <br>E-mail: test@example.com <br>Twitter: @test</p>
