--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <h3 id="team">Team</h3>
 
     <p>We're Hiring!</p>
-    <h3 id="contact">Contact</h3>
+    <img src="./resources/images/Felix-the-name.jpg" alt="">
+    <h3 id="contact">Contact Bungholio</h3>
     <p>Phone: (555) 555-5555 <br>E-mail: test@example.com <br>Twitter: @test</p>
 
 
